# jwt-inspector

./: LICENSE  README.md  pyproject.toml
jwt_inspector/: __init__.py  analyzer.py  app.py  cli.py  creator.py  decoder.py  formatter.py  generator.py  verifier.py
