[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jwt-inspector"
version = "1.0.0"
description = "Offline JWT decoder, verifier, and editor. Never paste tokens into random websites."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "jwt-inspector contributors"}]
keywords = ["jwt", "token", "security", "decode", "verify"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "click>=8.0",
    "cryptography>=41.0",
]

[project.optional-dependencies]
tui = ["textual>=0.40"]

[project.scripts]
jwt-inspector = "jwt_inspector.cli:cli"

[tool.setuptools.packages.find]
include = ["jwt_inspector*"]
